updated the developer details

--- a/search.html
+++ b/search.html
@@ -86,10 +86,11 @@
                 <div class="developer-detail">
                     <p class="developer-name">John Doe</p>
                     <ul class="developer-list">
-                        <li class="developer-list_item">Front-end Developer</li>
+                        <li class="developer-list_frontend">Front-end Developer</li>
                         <li class="developer-list_item">Nigeria</li>
                         <li class="developer-list_item">$15/hr</li>
-                        <li class="developer-list_item yellow-item">5.0 <span class="number">(400)</span></li>
+                        <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
+                            <span class="number">(400)</span></li>
                     </ul>
                     <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
                         blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
@@ -114,17 +115,19 @@
                     <button class="view-btn">View profile</button>
                 </div>
             </div>
+            <hr>
             <div class="developer-details">
                 <div class="developer-img">
-                    <img src="./asset/pic1.jpg" alt="developer picture" class="developer-img_main">
+                    <img src="./asset/pic2.jpg" alt="developer picture" class="developer-img_main">
                 </div>
                 <div class="developer-detail">
                     <p class="developer-name">Mike Doe</p>
                     <ul class="developer-list">
-                        <li class="developer-list_item">Front-end Developer</li>
+                        <li class="developer-list_frontend">Front-end Developer</li>
                         <li class="developer-list_item">Nigeria</li>
                         <li class="developer-list_item">$15/hr</li>
-                        <li class="developer-list_item yellow-item">5.0 <span class="number">(400)</span></li>
+                        <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
+                            <span class="number">(400)</span></li>
                     </ul>
                     <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
                         blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
@@ -149,17 +152,19 @@
                     <button class="view-btn">View profile</button>
                 </div>
             </div>
+            <hr>
             <div class="developer-details">
                 <div class="developer-img">
-                    <img src="./asset/pic1.jpg" alt="developer picture" class="developer-img_main">
+                    <img src="./asset/pic3.jpg" alt="developer picture" class="developer-img_main">
                 </div>
                 <div class="developer-detail">
                     <p class="developer-name">Jane Doe</p>
                     <ul class="developer-list">
-                        <li class="developer-list_item">Front-end Developer</li>
+                        <li class="developer-list_frontend">Front-end Developer</li>
                         <li class="developer-list_item">Nigeria</li>
                         <li class="developer-list_item">$15/hr</li>
-                        <li class="developer-list_item yellow-item">5.0 <span class="number">(400)</span></li>
+                        <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
+                            <span class="number">(400)</span></li>
                     </ul>
                     <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
                         blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
@@ -184,17 +189,19 @@
                     <button class="view-btn">View profile</button>
                 </div>
             </div>
+            <hr>
             <div class="developer-details">
                 <div class="developer-img">
-                    <img src="./asset/pic1.jpg" alt="developer picture" class="developer-img_main">
+                    <img src="./asset/pic4.jpg" alt="developer picture" class="developer-img_main">
                 </div>
                 <div class="developer-detail">
                     <p class="developer-name">Susan Doe</p>
                     <ul class="developer-list">
-                        <li class="developer-list_item">Front-end Developer</li>
+                        <li class="developer-list_frontend">Front-end Developer</li>
                         <li class="developer-list_item">Nigeria</li>
                         <li class="developer-list_item">$15/hr</li>
-                        <li class="developer-list_item yellow-item">5.0 <span class="number">(400)</span></li>
+                        <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
+                            <span class="number">(400)</span></li>
                     </ul>
                     <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
                         blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
@@ -219,17 +226,19 @@
                     <button class="view-btn">View profile</button>
                 </div>
             </div>
+            <hr>
             <div class="developer-details">
                 <div class="developer-img">
-                    <img src="./asset/pic1.jpg" alt="developer picture" class="developer-img_main">
+                    <img src="./asset/pic3.jpg" alt="developer picture" class="developer-img_main">
                 </div>
                 <div class="developer-detail">
                     <p class="developer-name">James Doe</p>
                     <ul class="developer-list">
-                        <li class="developer-list_item">Front-end Developer</li>
+                        <li class="developer-list_frontend">Front-end Developer</li>
                         <li class="developer-list_item">Nigeria</li>
                         <li class="developer-list_item">$15/hr</li>
-                        <li class="developer-list_item yellow-item">5.0 <span class="number">(400)</span></li>
+                        <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
+                            <span class="number">(400)</span></li>
                     </ul>
                     <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
                         blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
@@ -254,6 +263,7 @@
                     <button class="view-btn">View profile</button>
                 </div>
             </div>
+            <hr>
             <div class="developers-signup">signup</div>
         </div>
     </section>
