Added the Signup

--- a/search.html
+++ b/search.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>team_start</title>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400i,700,900&display=swap"
-        rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400i,600,700,900&display=swap"
+       rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="search.css" />
@@ -36,7 +36,7 @@
         <section class="search-section">
             <div class="search-header">
                 <div>
-                    <h3 class="search-header_primary">Browse Developers</h3>
+                    <p class="search-header_primary">Browse Developers</p>
                 </div>
                 <div class="search-header_secondary">
                     <input class="header-inp" type="text" placeholder="What skills are you looking for?">
@@ -264,7 +264,10 @@
                 </div>
             </div>
             <hr>
-            <div class="developers-signup">signup</div>
+            <div class="developers-signup">
+                <p class="signup-header">Want to browse more developers?</p>
+                <button class="signup-btn">Sign Up</button>
+            </div>
         </div>
     </section>
 </body>
