I made corrections to the about us link on the navbar

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li class="landing-li">
             <a href="search.html">Browse developers</a>
           </li>
-          <li class="landing-li"><a href="#">About Us</a></li>
+          <li class="landing-li"><a href="about.html">About Us</a></li>
           <li class="landing-li"><a href="#">Login</a></li>
           <li class="landing-li signup">
             <a href="signup.html">Sign Up</a>
