--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 	            <li><a class="link increasefont"href="index.html">RemDev</a></li>
 	            <li class="push sourcefont"><a class="link" href="index.html">Home</a></li>
 	            <li class="sourcefont"><a class="link" href="search.html">Browse developers</a></li>
-	            <li class="pushleft sourcefont"><a class="link" href="#">About Us</a></li>
+	            <li class="pushleft sourcefont"><a class="link" href="about.html">About Us</a></li>
 
 	        </ul>
 	    </nav>
