--- a/dev-page.html
+++ b/dev-page.html
@@ -41,7 +41,7 @@
         <ul>
             <li><a href="index.html"></a>RemDev</a></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="developers.html">Developers</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.html">Sign Up</a></li>
