--- a/search.html
+++ b/search.html
@@ -26,7 +26,7 @@
                     <li class="search-li">
                         <a href="search.html">Browse developers</a>
                     </li>
-                    <li class="search-li"><a href="#">About Us</a></li>
+                    <li class="search-li"><a href="about.html">About Us</a></li>
                     <li class="search-li"><a href="#">Login</a></li>
                     <li class="search-li signup">
                         <a href="signup.html">Sign Up</a>
