--- a/signup.html
+++ b/signup.html
@@ -13,10 +13,10 @@
 <body>
     <nav class="mainzone">
         <ul class="mainnav">
-            <li><a class="link increasefont"href="index.html">RemDev</a></li>
+            <li><a class="link increasefont" href="index.html">RemDev</a></li>
             <li class="push sourcefont"><a class="link" href="index.html">Home</a></li>
             <li class="sourcefont"><a class="link" href="search.html">Browse developers</a></li>
-            <li class="pushleft sourcefont"><a class="link" href="">About Us</a></li>
+            <li class="pushleft sourcefont"><a class="link" href="about.html">About Us</a></li>
         </ul>
     </nav>
     <div class="signup-page">
