--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <a style="float:right" href="twitter.com">Twitter</a>
     </footer>
   </div>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
