Added the icons

--- a/search.html
+++ b/search.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>team_start</title>
-   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400i,600,700,900&display=swap"
-       rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400i,600,700,900&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="search.css" />
@@ -269,7 +269,64 @@
                 <button class="signup-btn">Sign Up</button>
             </div>
         </div>
+        <div class="company-logos">
+            <svg class="company-logo">
+                <use xlink:href='./asset/sprite.svg#slack'></use>
+            </svg>
+            <svg class="company-logo">
+                <use xlink:href='./asset/sprite.svg#facebook'></use>
+            </svg>
+            <svg class="company-logo">
+                <use xlink:href='./asset/sprite.svg#tesla'></use>
+            </svg>
+            <svg class="company-logo">
+                <use xlink:href='./asset/sprite.svg#twitter'></use>
+            </svg>
+            <svg class="company-logo">
+                <use xlink:href='./asset/sprite.svg#search'></use>
+            </svg>
+            <svg class="company-logo">
+                <use xlink:href='./asset/sprite.svg#netflix'></use>
+            </svg>
+        </div>
     </section>
+    <section class="bottom-section">
+        <div class="footer">
+            <div class="footer-1">
+                <div class="footer-1_primary">
+                    <p class="footer-1_header">What are you waiting for?</p>
+                    <p class="footer-1_text">Lets help you bring your dream to life</p>
+                </div>
+                <div class="footer-search">
+                    <div>
+                        <input class="footer_inp" type="text" placeholder="What skills are you looking for?">
+                    </div>
+                    <div class="footer-1_btns">
+                        <button class="footer-1_register">Register as developer</button>
+                        <p class="footer-1_or">or</p>
+                        <button class="footer-1_find">Find developers</button>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-2">
+                <div class="footer-2_left">
+                    <p>&copy; 2019 <span class="footer-2_remdev">RemDev</span></p>
+                </div>
+                <div class="footer-2_right">
+                    <svg class="footer-2_icons">
+                        <use xlink:href='./asset/sprite.svg#facebook-1'></use>
+                    </svg>
+                    <svg class="footer-2_icons">
+                        <use xlink:href='./asset/sprite.svg#twitter-1'></use>
+                    </svg>
+                    <svg class="footer-2_icons">
+                        <use xlink:href='./asset/sprite.svg#github'></use>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
