--- a/search.html
+++ b/search.html
@@ -92,9 +92,7 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
-                        blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
-                        quasi obcaecati. Et neque ipsam vero explicabo nam!</p>
+                    <p class="developer-text">John is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
@@ -129,9 +127,7 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
-                        blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
-                        quasi obcaecati. Et neque ipsam vero explicabo nam!</p>
+                    <p class="developer-text">Mike is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
@@ -166,9 +162,7 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
-                        blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
-                        quasi obcaecati. Et neque ipsam vero explicabo nam!</p>
+                    <p class="developer-text">jane is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
@@ -203,9 +197,7 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
-                        blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
-                        quasi obcaecati. Et neque ipsam vero explicabo nam!</p>
+                    <p class="developer-text">Susan is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
@@ -240,9 +232,7 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
-                        blanditiis sit amet cupiditate voluptatem accusamus dolor. Adipisci officiis vel at sed quas
-                        quasi obcaecati. Et neque ipsam vero explicabo nam!</p>
+                    <p class="developer-text">James is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
